# Diagflow

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  宝塔面板配置说明.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
agent/src/: agent.py  kroki_client.py  main.py  syntax.py
agent/syntax_toml/: README.md  blockdiag.toml  c4plantuml.toml  d2.toml  dbml.toml  ditaa.toml  erd.toml  graphviz.toml  mermaid.toml  nomnoml.toml  nwdiag.toml  plantuml.toml  seqdiag.toml  svgbob.toml  wavedrom.toml
deploy/: .env.example  README.md  docker-compose.kroki.yml  docker-compose.prod.yml  docker-compose.yml  docker.md  nginx.conf  vercel.md
src/app/: globals.css  layout.tsx  page-simplified.tsx.backup  page.tsx
src/app/__tests__/: page-render-integration.test.tsx  page.test.tsx
src/components/: chat-panel.tsx  code-editor.tsx  error-boundary.tsx  session-history.tsx  svg-preview.tsx
src/components/__tests__/: chat-panel.test.tsx  session-history.test.tsx
src/components/ai-elements/: code-block.tsx  message.tsx  prompt-input.tsx  tool.tsx
src/components/dialogs/: type-change-dialog.tsx  unsaved-changes-dialog.tsx
src/config/: app.ts
src/lib/: constants.ts  error-handler.ts  error-parser.ts  kroki.ts  langfuse.ts  logger.ts  storage.ts  syntax.ts  test-utils.ts  types.ts  use-render-control.ts  use-session.ts  use-undo.ts
(+76 files in other folders)
